# scientific-figure-color-palettes-from-world-famous-paintings

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: naming_results.json  paintings.json  palettes.json  palettes_draft.json  qa_v2_results.json  verification_results.json
docs/: DESIGN.md
engine/: apply_verification.py  build_all.py  extract.py  fetch_images.py  make_readme.py  merge_names.py  poster.py  repair_roles.py  wf2_fixup.js  wf2_name.js  wf3_qa.js  wf3_qa_cn.js  wf3_qa_v2.js  wf3_spot.js
masterpalettes/: __init__.py
masterpalettes/data/: palettes.json
