[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "masterpalettes"
version = "1.0.0"
description = "Ready-to-use color schemes for research-paper figures, extracted from 102 world-famous paintings"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ziyuan Zhao" }]
requires-python = ">=3.8"
keywords = ["matplotlib", "color", "palette", "colormap", "scientific-visualization", "art"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Visualization",
  "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
mpl = ["matplotlib>=3.3"]

[project.urls]
Homepage = "https://github.com/steven068zzy/scientific-figure-color-palettes-from-world-famous-paintings"

[tool.setuptools]
packages = ["masterpalettes"]

[tool.setuptools.package-data]
masterpalettes = ["data/*.json"]
